# weather-app-acceptance-test

./: CMakeLists.txt  DEV_SPEC.md  FUNC_SPEC.md  README.md
src/: main.cpp  weather_client.cpp  weather_client.hpp
tests/: weather_test.cpp
